Añadido cedula y nombre

--- a/Prueba_unidad_IV.ipynb
+++ b/Prueba_unidad_IV.ipynb
@@ -10,8 +10,8 @@
     "# Prueba Práctica - Unidad IV Estructuras de Control Repetitivas\n",
     "\n",
     "##### **Participantes**:\n",
-    "- Nombre y Apellido, C.I - 00.000.000\n",
-    "- Nombre y Apellido, C.I - 00.000.000\n",
+    "- Gabriel Carneiro, C.I - 32.051.221\n",
+    "- Juan Villaroel, C.I - 32.051.184\n",
     "\n",
     "#### **Instrucciones Generales**\n",
     "- **Tiempo asignado**: 60-90 minutos\n",
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Aquí se realiza el ejercicio 1"
+    "numero = int()"
    ]
   },
   {
