--- a/Prueba_unidad_IV.ipynb
+++ b/Prueba_unidad_IV.ipynb
@@ -90,12 +90,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "06e4c210",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingresaste 2 vocales y 2 consonantes\n"
+     ]
+    }
+   ],
    "source": [
-    "# Aquí se realiza el ejercicio 2"
+    "# EJERCICIO 2\n",
+    "frase= input(\"Ingrese una frase: \")\n",
+    "lista_vocales= \"aeiou\"\n",
+    "lista_consonantes= \"bcdfghjklmnpqrstvwxyz\"\n",
+    "vocales= 0\n",
+    "consonantes= 0\n",
+    "for i in lista_vocales:\n",
+    "    for e in frase.lower():\n",
+    "        if i == e:\n",
+    "            vocales += 1\n",
+    "for i in lista_consonantes:\n",
+    "    for e in frase.lower():\n",
+    "        if i == e:\n",
+    "            consonantes += 1\n",
+    "print(f\"Ingresaste {vocales} vocales y {consonantes} consonantes\")\n"
    ]
   },
   {
@@ -167,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Aqui se resuleve el ejercicio 4"
+    "# Aqui se resuleve el ejercicio 4\n"
    ]
   },
   {
@@ -180,8 +202,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
