--- a/Prueba_unidad_IV.ipynb
+++ b/Prueba_unidad_IV.ipynb
@@ -61,9 +61,26 @@
    "execution_count": null,
    "id": "5b996202",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "numero = int()"
+    "numero = int(input((\"Ingrese los numeros a sumar (Ej: 1234): \")).replace(\" \",\"\"))\n",
+    "suma = 0\n",
+    "\n",
+    "while numero <= 0:\n",
+    "    numero = int(input(\"El numero debe ser mayor a cero. Intente de nuevo: \"))\n",
+    "    \n",
+    "for i in str(numero):\n",
+    "    suma += int(i)\n",
+    "    \n",
+    "print(suma)"
    ]
   },
   {
@@ -127,9 +144,40 @@
    "execution_count": null,
    "id": "6e1014c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El numero 997 es primo\n"
+     ]
+    }
+   ],
    "source": [
-    "# Aquí se resuelve el ejercicio 3"
+    "import math\n",
+    "\n",
+    "numero = int(input(\"Introduce un numero entero :\"))\n",
+    "divisible = False\n",
+    "\n",
+    "if numero == 1:\n",
+    "    divisible = True\n",
+    "\n",
+    "while numero <= 0:\n",
+    "    numero = int(input(\"El numero debe ser mayor que 0. Intente de nuevo :\"))\n",
+    "\n",
+    "for i in range(2,int(math.sqrt(numero)) + 1):\n",
+    "    if (numero % i) == 0:\n",
+    "        divisible = True\n",
+    "        break\n",
+    "    i += 1\n",
+    "    \n",
+    "if i == numero:\n",
+    "    divisible = False\n",
+    "    \n",
+    "if divisible:\n",
+    "    print(f\"El numero {numero} no es primo\")\n",
+    "else:\n",
+    "    print(f\"El numero {numero} es primo\")"
    ]
   },
   {
@@ -162,12 +210,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "4df66798",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El MCD es:  6\n"
+     ]
+    }
+   ],
    "source": [
-    "# Aqui se resuleve el ejercicio 4"
+    "a = int(input(\"Introduce el numero a: \"))\n",
+    "while a <= 0:\n",
+    "    a = int(input(\"El numero a debe ser mayor a cero. Intente de nuevo: \"))\n",
+    "\n",
+    "b = int(input(\"Introduce el numero b: \"))\n",
+    "while b <= 0:\n",
+    "    b = int(input(\"El numero b debe ser mayor 0 cero. Intente de nuevo: \"))\n",
+    "\n",
+    "r = a % b\n",
+    "\n",
+    "while r != 0:\n",
+    "    a = b\n",
+    "    b = r\n",
+    "    r = a % b\n",
+    "    \n",
+    "\n",
+    "print(f\"El MCD es:  {b}\")"
    ]
   },
   {
@@ -180,8 +252,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
