Arreglado Villaroel y acomodado las salidas de los codigos

--- a/Prueba_unidad_IV.ipynb
+++ b/Prueba_unidad_IV.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "##### **Participantes**:\n",
     "- Gabriel Carneiro, C.I - 32.051.221\n",
-    "- Juan Villaroel, C.I - 32.051.184\n",
+    "- Juan Villarroel, C.I - 32.051.184\n",
     "\n",
     "#### **Instrucciones Generales**\n",
     "- **Tiempo asignado**: 60-90 minutos\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "5b996202",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
+      "La suma de los digitos es: 10\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
     "for i in str(numero):\n",
     "    suma += int(i)\n",
     "    \n",
-    "print(suma)"
+    "print(f\"La suma de los digitos es: {suma}\")"
    ]
   },
   {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "id": "06e4c210",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ingresaste 2 vocales y 2 consonantes\n"
+      "Ingresaste 4 vocales y 5 consonantes\n"
      ]
     }
    ],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "6e1014c6",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El numero 997 es primo\n"
+      "El numero 7 es primo\n"
      ]
     }
    ],
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "id": "4df66798",
    "metadata": {},
    "outputs": [
