Eliminando cosas innecesarias

--- a/Prueba_unidad_IV.ipynb
+++ b/Prueba_unidad_IV.ipynb
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "id": "6e1014c6",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El numero 7 es primo\n"
+      "El numero 1000 no es primo\n"
      ]
     }
    ],
@@ -191,10 +191,7 @@
     "    if (numero % i) == 0:\n",
     "        divisible = True\n",
     "        break\n",
-    "    i += 1\n",
-    "    \n",
-    "if i == numero:\n",
-    "    divisible = False\n",
+    "  \n",
     "    \n",
     "if divisible:\n",
     "    print(f\"El numero {numero} no es primo\")\n",
