Arreglado error de que si pones  un numero negativo y luego 1 te dice que 1 es primo

--- a/Prueba_unidad_IV.ipynb
+++ b/Prueba_unidad_IV.ipynb
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 71,
    "id": "6e1014c6",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El numero 7 es primo\n"
+      "El numero 1 no es primo\n"
      ]
     }
    ],
@@ -181,11 +181,11 @@
     "numero = int(input(\"Introduce un numero entero :\"))\n",
     "divisible = False\n",
     "\n",
-    "if numero == 1:\n",
-    "    divisible = True\n",
-    "\n",
     "while numero <= 0:\n",
     "    numero = int(input(\"El numero debe ser mayor que 0. Intente de nuevo :\"))\n",
+    "\n",
+    "if numero == 1:\n",
+    "    divisible = True\n",
     "\n",
     "for i in range(2,int(math.sqrt(numero)) + 1):\n",
     "    if (numero % i) == 0:\n",
