--- a/Prueba_unidad_IV.ipynb
+++ b/Prueba_unidad_IV.ipynb
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 82,
    "id": "6e1014c6",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El numero 1 no es primo\n"
+      "El numero 7 es primo\n"
      ]
     }
    ],
